--- a/templates/add_matricula.html
+++ b/templates/add_matricula.html
@@ -63,7 +63,7 @@
                 <td>{{ our_matriculas.codCurso }}</td>
                 <td>
                     <a class="btn btn-primary" href="{{ url_for('update_matricula', codigo=our_matriculas.codigo) }}">editar</a>
-                    <a class="btn btn-danger" href="{{ url_for('delete_matricula', codigo=our_matriculas.codigo) }}">eliminar</a>
+                    <!-- <a class="btn btn-danger" href="{{ url_for('delete_matricula', codigo=our_matriculas.codigo) }}">eliminar</a> -->
                     <br>
                 </td>
               </tr>
