--- a/templates/edit_curso.html
+++ b/templates/edit_curso.html
@@ -33,7 +33,7 @@
                 <td>{{ our_cursos.credito}}</td>
                 <td>
                     <a class="btn btn-primary" href="{{ url_for('update_curso', codigo=our_cursos.codigo) }}">Editar</a>
-                    <a class="btn btn-danger" href="{{ url_for('delete_curso', codigo =our_cursos.codigo) }}">Eliminar</a>
+                    <!-- <a class="btn btn-danger" href="{{ url_for('delete_curso', codigo =our_cursos.codigo) }}">Eliminar</a> -->
                     <br>
                 </td>
               </tr>
