--- a/templates/edit_matricula.html
+++ b/templates/edit_matricula.html
@@ -33,7 +33,7 @@
                 <td>{{ our_matriculas.codCurso}}</td>
                 <td>
                     <a class="btn btn-primary" href="{{ url_for('update_matricula', codigo=our_matriculas.codigo) }}">Editar</a>
-                    <a class="btn btn-danger" href="{{ url_for('delete_matricula', codigo =our_matriculas.codigo) }}">Eliminar</a>
+                    <!-- <a class="btn btn-danger" href="{{ url_for('delete_matricula', codigo =our_matriculas.codigo) }}">Eliminar</a> -->
                     <br>
                 </td>
               </tr>
