--- a/templates/add_curso.html
+++ b/templates/add_curso.html
@@ -54,7 +54,7 @@
                 <td>{{ our_cursos.credito }}</td>
                 <td>
                     <a class="btn btn-primary" href="{{ url_for('update_curso', codigo=our_cursos.codigo) }}">editar</a>
-                    <a class="btn btn-danger" href="{{ url_for('delete_curso', codigo=our_cursos.codigo) }}">eliminar</a>
+                    <!-- <a class="btn btn-danger" href="{{ url_for('delete_curso', codigo=our_cursos.codigo) }}">eliminar</a> -->
                     <br>
                 </td>
               </tr>
