--- a/templates/add_escuela.html
+++ b/templates/add_escuela.html
@@ -54,7 +54,7 @@
                 <td>{{ our_escuelas.duracion }}</td>
                 <td>
                     <a class="btn btn-primary" href="{{ url_for('update_escuela', codigo=our_escuelas.codigo) }}">editar</a>
-                    <a class="btn btn-danger" href="{{ url_for('delete_escuela', codigo=our_escuelas.codigo) }}">eliminar</a>
+                    <!-- <a class="btn btn-danger" href="{{ url_for('delete_escuela', codigo=our_escuelas.codigo) }}">eliminar</a> -->
                     <br>
                 </td>
               </tr>
