--- a/templates/edit_escuela.html
+++ b/templates/edit_escuela.html
@@ -33,7 +33,7 @@
                 <td>{{ our_escuelas.duracion}}</td>
                 <td>
                     <a class="btn btn-primary" href="{{ url_for('update_escuela', codigo=our_escuelas.codigo) }}">Editar</a>
-                    <a class="btn btn-danger" href="{{ url_for('delete_escuela', codigo =our_escuelas.codigo) }}">Eliminar</a>
+                    <!-- <a class="btn btn-danger" href="{{ url_for('delete_escuela', codigo =our_escuelas.codigo) }}">Eliminar</a> -->
                     <br>
                 </td>
               </tr>
