--- a/templates/edit_estudiante.html
+++ b/templates/edit_estudiante.html
@@ -41,7 +41,7 @@
                 <td>{{ our_estudiantes.codEscuela}}</td>
                 <td>
                     <a class="btn btn-primary" href="{{ url_for('update_estudiante', id=our_estudiantes.id) }}">Editar</a>
-                    <a class="btn btn-danger" href="{{ url_for('delete_estudiante', id =our_estudiantes.id) }}">Eliminar</a>
+                    <!-- <a class="btn btn-danger" href="{{ url_for('delete_estudiante', id =our_estudiantes.id) }}">Eliminar</a> -->
                     <br>
                 </td>
               </tr>
